--- a/DSAlgoProject/test-output/emailable-report.html
+++ b/DSAlgoProject/test-output/emailable-report.html
@@ -9,27 +9,15 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="8">DSAlgoProject</th></tr>
-<tr><td><a href="#t0">getstarted</a></td><td class="num">2</td><td class="num">0</td><td class="num">0</td><td class="num attn">1</td><td class="num">43,137</td><td></td><td></td></tr>
+<tr><td><a href="#t0">getstarted</a></td><td class="num">2</td><td class="num">0</td><td class="num">0</td><td class="num attn">1</td><td class="num">5,518</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">DSAlgoProject</th></tr></tbody><tbody id="t0"><tr><th colspan="4">getstarted &#8212; failed</th></tr><tr class="failedeven"><td rowspan="1">com.DSAlgo.Testcases.LoginTestcase_Tc</td><td><a href="#m0">SigninPage</a></td><td rowspan="1">1655589033305</td><td rowspan="1">15149</td></tr><tr><th colspan="4">getstarted &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">com.DSAlgo.Testcases.GetStartedPageTest</td><td><a href="#m1">getstarted</a></td><td rowspan="1">1655589014011</td><td rowspan="1">4198</td></tr><tr class="passedodd"><td rowspan="1">com.DSAlgo.Testcases.HomePageTest</td><td><a href="#m2">Login</a></td><td rowspan="1">1655589024436</td><td rowspan="1">3022</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">DSAlgoProject</th></tr></tbody><tbody id="t0"><tr><th colspan="4">getstarted &#8212; failed</th></tr><tr class="failedeven"><td rowspan="1">com.DSAlgo.Testcases.LoginTestcase_Tc</td><td><a href="#m0">SigninPage</a></td><td rowspan="1">1656133168110</td><td rowspan="1">265</td></tr><tr><th colspan="4">getstarted &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">com.DSAlgo.Testcases.GetStartedPageTest</td><td><a href="#m1">getstarted</a></td><td rowspan="1">1656133166925</td><td rowspan="1">439</td></tr><tr class="passedodd"><td rowspan="1">com.DSAlgo.Testcases.HomePageTest</td><td><a href="#m2">SignInTest</a></td><td rowspan="1">1656133167614</td><td rowspan="1">200</td></tr></tbody>
 </table>
-<h2>getstarted</h2><h3 id="m0">com.DSAlgo.Testcases.LoginTestcase_Tc#SigninPage</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">org.openqa.selenium.NoSuchElementException: Unable to find element with locator By.name: username
-For documentation on this error, please visit: https://selenium.dev/exceptions/#no_such_element
-Build info: version: &apos;4.2.1&apos;, revision: &apos;ac4d0fdd4a&apos;
-System info: host: &apos;GWTN156-11&apos;, ip: &apos;192.168.1.104&apos;, os.name: &apos;Windows 10&apos;, os.arch: &apos;amd64&apos;, os.version: &apos;10.0&apos;, java.version: &apos;17.0.1&apos;
-Driver info: driver.version: RemoteWebDriver
-	at org.openqa.selenium.remote.ElementLocation$ElementFinder$2.findElement(ElementLocation.java:165)
-	at org.openqa.selenium.remote.ElementLocation.findElement(ElementLocation.java:66)
-	at org.openqa.selenium.remote.RemoteWebDriver.findElement(RemoteWebDriver.java:369)
-	at org.openqa.selenium.remote.RemoteWebDriver.findElement(RemoteWebDriver.java:361)
-	at org.openqa.selenium.support.pagefactory.DefaultElementLocator.findElement(DefaultElementLocator.java:70)
-	at org.openqa.selenium.support.pagefactory.internal.LocatingElementHandler.invoke(LocatingElementHandler.java:39)
-	at jdk.proxy2/jdk.proxy2.$Proxy21.sendKeys(Unknown Source)
-	at com.DSAlgo.pageobjects.LoginPage.TypeUsername(LoginPage.java:38)
-	at com.DSAlgo.Testcases.LoginTestcase_Tc.SigninPage(LoginTestcase_Tc.java:24)
+<h2>getstarted</h2><h3 id="m0">com.DSAlgo.Testcases.LoginTestcase_Tc#SigninPage</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.NullPointerException: Cannot invoke &quot;org.openqa.selenium.WebDriver.manage()&quot; because &quot;this.driver&quot; is null
+	at com.DSAlgo.Testcases.LoginTestcase_Tc.SigninPage(LoginTestcase_Tc.java:28)
 	at java.base/java.util.ArrayList.forEach(ArrayList.java:1511)
 ... Removed 27 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 <h3 id="m1">com.DSAlgo.Testcases.GetStartedPageTest#getstarted</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m2">com.DSAlgo.Testcases.HomePageTest#Login</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m2">com.DSAlgo.Testcases.HomePageTest#SignInTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
