--- a/DSAlgoProject/test-output/old/DSAlgoProject/methods-not-run.html
+++ b/DSAlgoProject/test-output/old/DSAlgoProject/methods-not-run.html
@@ -1,2 +1,6 @@
 <h2>Methods that were not run</h2><table>
+<tr><td>com.DSAlgo.Testcases.BaseClass.Startbrowser</td></tr>
+<tr><td>com.DSAlgo.Testcases.BaseClass.Startbrowser</td></tr>
+<tr><td>com.DSAlgo.Testcases.BaseClass.teardown</td></tr>
+<tr><td>com.DSAlgo.Testcases.BaseClass.teardown</td></tr>
 </table>
