--- a/DSAlgoProject/test-output/old/DSAlgoProject/methods.html
+++ b/DSAlgoProject/test-output/old/DSAlgoProject/methods.html
@@ -1,16 +1,20 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>DSAlgoProject</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="a19691">  <td>22/06/18 17:50:18</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.Startbrowser(java.lang.String)[pri:0, instance:com.DSAlgo.Testcases.HomePageTest@557caf28]">&gt;&gt;Startbrowser</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1759899303</td>   <td></td> </tr>
-<tr bgcolor="a19691">  <td>22/06/18 17:50:05</td>   <td>-12834</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.Startbrowser(java.lang.String)[pri:0, instance:com.DSAlgo.Testcases.GetStartedPageTest@13c9d689]">&gt;&gt;Startbrowser</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1759899303</td>   <td></td> </tr>
-<tr bgcolor="9f71a9">  <td>22/06/18 17:50:24</td>   <td>6195</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageTest.Login()[pri:2, instance:com.DSAlgo.Testcases.HomePageTest@557caf28]">Login</td> 
-  <td>main@1759899303</td>   <td></td> </tr>
-<tr bgcolor="9f8c73">  <td>22/06/18 17:50:33</td>   <td>15064</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTestcase_Tc.SigninPage()[pri:3, instance:com.DSAlgo.Testcases.LoginTestcase_Tc@408d971b]">SigninPage</td> 
-  <td>main@1759899303</td>   <td></td> </tr>
-<tr bgcolor="647d63">  <td>22/06/18 17:50:14</td>   <td>-4230</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GetStartedPageTest.getstarted()[pri:1, instance:com.DSAlgo.Testcases.GetStartedPageTest@13c9d689]">getstarted</td> 
-  <td>main@1759899303</td>   <td></td> </tr>
-<tr bgcolor="a19691">  <td>22/06/18 17:50:27</td>   <td>9217</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.Startbrowser(java.lang.String)[pri:0, instance:com.DSAlgo.Testcases.LoginTestcase_Tc@408d971b]">&gt;&gt;Startbrowser</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1759899303</td>   <td></td> </tr>
+<tr bgcolor="77d4a4">  <td>22/06/25 00:59:27</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.tearDownMethod(org.testng.ITestResult)[pri:0, instance:com.DSAlgo.Testcases.GetStartedPageTest@1e800aaa]">&lt;&lt;tearDownMethod</td> 
+<td>&nbsp;</td>  <td>main@1982787818</td>   <td></td> </tr>
+<tr bgcolor="77d4a4">  <td>22/06/25 00:59:28</td>   <td>1009</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.tearDownMethod(org.testng.ITestResult)[pri:0, instance:com.DSAlgo.Testcases.LoginTestcase_Tc@74e52ef6]">&lt;&lt;tearDownMethod</td> 
+<td>&nbsp;</td>  <td>main@1982787818</td>   <td></td> </tr>
+<tr bgcolor="d7b7bf">  <td>22/06/25 00:59:28</td>   <td>742</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTestcase_Tc.SigninPage()[pri:3, instance:com.DSAlgo.Testcases.LoginTestcase_Tc@74e52ef6]">SigninPage</td> 
+  <td>main@1982787818</td>   <td></td> </tr>
+<tr bgcolor="77d4a4">  <td>22/06/25 00:59:27</td>   <td>450</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.tearDownMethod(org.testng.ITestResult)[pri:0, instance:com.DSAlgo.Testcases.HomePageTest@62ddbd7e]">&lt;&lt;tearDownMethod</td> 
+<td>&nbsp;</td>  <td>main@1982787818</td>   <td></td> </tr>
+<tr bgcolor="de60b4">  <td>22/06/25 00:59:26</td>   <td>-443</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GetStartedPageTest.getstarted()[pri:1, instance:com.DSAlgo.Testcases.GetStartedPageTest@1e800aaa]">getstarted</td> 
+  <td>main@1982787818</td>   <td></td> </tr>
+<tr bgcolor="77d4a4">  <td>22/06/25 00:59:23</td>   <td>-3644</td> <td>&nbsp;</td><td title="&gt;&gt;BaseClass.Startbrowser(java.lang.String)[pri:0, instance:com.DSAlgo.Testcases.GetStartedPageTest@1e800aaa]">&gt;&gt;Startbrowser</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1982787818</td>   <td></td> </tr>
+<tr bgcolor="77d4a4">  <td>22/06/25 00:59:28</td>   <td>1143</td> <td>&nbsp;</td><td title="&lt;&lt;BaseClass.teardown()[pri:0, instance:com.DSAlgo.Testcases.GetStartedPageTest@1e800aaa]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1982787818</td>   <td></td> </tr>
+<tr bgcolor="ee8876">  <td>22/06/25 00:59:27</td>   <td>246</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageTest.SignInTest()[pri:2, instance:com.DSAlgo.Testcases.HomePageTest@62ddbd7e]">SignInTest</td> 
+  <td>main@1982787818</td>   <td></td> </tr>
 </table>
