--- a/DSAlgoProject/test-output/old/Default suite/classes.html
+++ b/DSAlgoProject/test-output/old/Default suite/classes.html
@@ -4,14 +4,14 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>com.DSAlgo.Testcases.HomePageTest</td>
+<td>com.DSAlgo.utilities.XLutils</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>Login</td>
+<td>ExcelDataProvider</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
