--- a/DSAlgoProject/test-output/old/DSAlgoProject/methods-alphabetical.html
+++ b/DSAlgoProject/test-output/old/DSAlgoProject/methods-alphabetical.html
@@ -1,22 +1,22 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>DSAlgoProject</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="beaaf1">  <td>22/06/27 01:25:46</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="QueueTest.ClickQueueTest()[pri:0, instance:com.DSAlgo.Testcases.QueueTest@40005471]">ClickQueueTest</td> 
-  <td>main@825962150</td>   <td></td> </tr>
-<tr bgcolor="ee8876">  <td>22/06/27 01:25:41</td>   <td>-4997</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageTest.SignInTest()[pri:2, instance:com.DSAlgo.Testcases.HomePageTest@302552ec]">SignInTest</td> 
-  <td>main@825962150</td>   <td></td> </tr>
-<tr bgcolor="d7b7bf">  <td>22/06/27 01:25:45</td>   <td>-907</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTestcase_Tc.SigninPage(java.lang.String,java.lang.String)[pri:3, instance:com.DSAlgo.Testcases.LoginTestcase_Tc@3d285d7e]">SigninPage</td> 
-  <td>main@825962150</td>   <td></td> </tr>
-<tr bgcolor="d7b7bf">  <td>22/06/27 01:25:45</td>   <td>-907</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTestcase_Tc.SigninPage(java.lang.String,java.lang.String)[pri:3, instance:com.DSAlgo.Testcases.LoginTestcase_Tc@3d285d7e]">SigninPage</td> 
-  <td>main@825962150</td>   <td></td> </tr>
-<tr bgcolor="d7b7bf">  <td>22/06/27 01:25:45</td>   <td>-907</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTestcase_Tc.SigninPage(java.lang.String,java.lang.String)[pri:3, instance:com.DSAlgo.Testcases.LoginTestcase_Tc@3d285d7e]">SigninPage</td> 
-  <td>main@825962150</td>   <td></td> </tr>
-<tr bgcolor="d7b7bf">  <td>22/06/27 01:25:45</td>   <td>-907</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTestcase_Tc.SigninPage(java.lang.String,java.lang.String)[pri:3, instance:com.DSAlgo.Testcases.LoginTestcase_Tc@3d285d7e]">SigninPage</td> 
-  <td>main@825962150</td>   <td></td> </tr>
-<tr bgcolor="b472aa">  <td>22/06/27 01:25:36</td>   <td>-10456</td> <td>&nbsp;</td><td title="&gt;&gt;BaseClass.Startbrowser(java.lang.String)[pri:0, instance:com.DSAlgo.Testcases.GetStartedPageTest@7c6908d7]">&gt;&gt;Startbrowser</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@825962150</td>   <td></td> </tr>
-<tr bgcolor="de60b4">  <td>22/06/27 01:25:41</td>   <td>-5667</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GetStartedPageTest.getstarted()[pri:1, instance:com.DSAlgo.Testcases.GetStartedPageTest@7c6908d7]">getstarted</td> 
-  <td>main@825962150</td>   <td></td> </tr>
-<tr bgcolor="b472aa">  <td>22/06/27 01:25:54</td>   <td>7998</td> <td>&nbsp;</td><td title="&lt;&lt;BaseClass.teardown()[pri:0, instance:com.DSAlgo.Testcases.GetStartedPageTest@7c6908d7]">&lt;&lt;teardown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@825962150</td>   <td></td> </tr>
+<tr bgcolor="f986e6">  <td>22/06/27 12:39:49</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="QueueTest.ClickQueueTest()[pri:0, instance:com.DSAlgo.Testcases.QueueTest@7a8c8dcf]">ClickQueueTest</td> 
+  <td>main@951221468</td>   <td></td> </tr>
+<tr bgcolor="a5b572">  <td>22/06/27 12:39:46</td>   <td>-3367</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageTest.SignInTest()[pri:2, instance:com.DSAlgo.Testcases.HomePageTest@1ce24091]">SignInTest</td> 
+  <td>main@951221468</td>   <td></td> </tr>
+<tr bgcolor="b29185">  <td>22/06/27 12:39:48</td>   <td>-626</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTestcase_Tc.SigninPage(java.lang.String,java.lang.String)[pri:3, instance:com.DSAlgo.Testcases.LoginTestcase_Tc@5dda768f]">SigninPage</td> 
+  <td>main@951221468</td>   <td></td> </tr>
+<tr bgcolor="b29185">  <td>22/06/27 12:39:48</td>   <td>-626</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTestcase_Tc.SigninPage(java.lang.String,java.lang.String)[pri:3, instance:com.DSAlgo.Testcases.LoginTestcase_Tc@5dda768f]">SigninPage</td> 
+  <td>main@951221468</td>   <td></td> </tr>
+<tr bgcolor="b29185">  <td>22/06/27 12:39:48</td>   <td>-626</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTestcase_Tc.SigninPage(java.lang.String,java.lang.String)[pri:3, instance:com.DSAlgo.Testcases.LoginTestcase_Tc@5dda768f]">SigninPage</td> 
+  <td>main@951221468</td>   <td></td> </tr>
+<tr bgcolor="b29185">  <td>22/06/27 12:39:48</td>   <td>-626</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTestcase_Tc.SigninPage(java.lang.String,java.lang.String)[pri:3, instance:com.DSAlgo.Testcases.LoginTestcase_Tc@5dda768f]">SigninPage</td> 
+  <td>main@951221468</td>   <td></td> </tr>
+<tr bgcolor="fbdac4">  <td>22/06/27 12:39:41</td>   <td>-8379</td> <td>&nbsp;</td><td title="&gt;&gt;BaseClass.Startbrowser(java.lang.String)[pri:0, instance:com.DSAlgo.Testcases.GetStartedPageTest@3d285d7e]">&gt;&gt;Startbrowser</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@951221468</td>   <td></td> </tr>
+<tr bgcolor="809879">  <td>22/06/27 12:39:45</td>   <td>-3863</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GetStartedPageTest.getstarted()[pri:1, instance:com.DSAlgo.Testcases.GetStartedPageTest@3d285d7e]">getstarted</td> 
+  <td>main@951221468</td>   <td></td> </tr>
+<tr bgcolor="fbdac4">  <td>22/06/27 12:39:56</td>   <td>7066</td> <td>&nbsp;</td><td title="&lt;&lt;BaseClass.teardown()[pri:0, instance:com.DSAlgo.Testcases.GetStartedPageTest@3d285d7e]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@951221468</td>   <td></td> </tr>
 </table>
